Continuando tela Bikcraft

--- a/pages/bikes/bikes.html
+++ b/pages/bikes/bikes.html
@@ -15,9 +15,30 @@
             <ul>
                 <li><a href="bikes.html">Bicicletas</a></li>
                 <li><a href="../insurance/insurance.html">Seguros</a></li>
-                <li><a href="..contact/contact.html">Contato</a></li>
+                <li><a href="../contact/contact.html">Contato</a></li>
             </ul>
         </header>
+        <div class="card">
+            <h2>Nossas Bicicletas <span class="text-yellow">.</span></h2>
+            <h6 class="text-muted">Escolha a melhor bicicleta para o seu conforto</h6>
+        </div>
+        <div class="row">
+            <div class="col-6 bg-red">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum impedit soluta sed veniam et, voluptatibus necessitatibus ex asperiores officiis facere quasi provident laborum, sequi dolor debitis consequuntur adipisci voluptate iure!</p>
+            </div>
+            <div class="col-6 row bg-blue">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum impedit soluta sed veniam et, voluptatibus necessitatibus ex asperiores officiis facere quasi provident laborum, sequi dolor debitis consequuntur adipisci voluptate iure!</p>
+                <div class="col-4 bg-gold">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum impedit soluta sed veniam et, voluptatibus necessitatibus ex asperiores officiis facere quasi provident laborum, sequi dolor debitis consequuntur adipisci voluptate iure!</p>
+                </div>
+                <div class="col-4 bg-gold">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum impedit soluta sed veniam et, voluptatibus necessitatibus ex asperiores officiis facere quasi provident laborum, sequi dolor debitis consequuntur adipisci voluptate iure!</p>
+                </div>
+                <div class="col-4 bg-gold">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum impedit soluta sed veniam et, voluptatibus necessitatibus ex asperiores officiis facere quasi provident laborum, sequi dolor debitis consequuntur adipisci voluptate iure!</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
