--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -18,6 +18,10 @@
                 <li><a href="contact.html">Contato</a></li>
             </ul>
         </header>
+        <div class="card">
+            <h2>Nosso Contato <span class="text-yellow">.</span></h2>
+            <h6 class="text-muted">Sempre que quiser estaremos à disposição para atendermos os nossos clientes da melhor forma possível</h6>
+        </div>
     </div>
 </body>
 </html>
