--- a/pages/insurance/insurance.html
+++ b/pages/insurance/insurance.html
@@ -18,6 +18,10 @@
                 <li><a href="../contact/contact.html">Contato</a></li>
             </ul>
         </header>
+        <div class="card">
+            <h2>Nossos Planos de Seguro <span class="text-yellow">.</span></h2>
+            <h6 class="text-muted">Escolha o melhor plano de seguro que se encaixa no seu orçamento</h6>
+        </div>
     </div>
 </body>
 </html>
